[gd_scene load_steps=3 format=3 uid="uid://b0xs4iwfirm7t"]

[ext_resource type="Script" path="res://scripts/item.gd" id="1_iam64"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8y05"]
size = Vector2(16, 16)

[node name="item" type="Node2D"]
script = ExtResource("1_iam64")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_d8y05")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
